--- a/test/fixtures/roles.yml
+++ b/test/fixtures/roles.yml
@@ -4,8 +4,10 @@
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
-# column: value
-#
-two: {}
-# column: value
+admin:
+    users: user_admin
+    name: admin
+
+client:
+    users: user_client
+    name: client
