--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -7,10 +7,12 @@
 
 user_admin:
     email: admin@example.com
+    encrypted_password: <%= User.new.send(:password_digest, '123456') %>
     roles: admin
 
 user_client:
     email: client@example.com
+    encrypted_password: <%= User.new.send(:password_digest, '123456') %>
     roles: client
 
 
