--- a/config/database.yml
+++ b/config/database.yml
@@ -89,4 +89,4 @@ production:
   <<: *default
   database: store_production
   username: store
-  password: <%= ENV['STORE_DATABASE_PASSWORD'] %>
+  password: store
